# test

./: .env.example  .gitignore  claude.md  dev-backend.ps1  dev-frontend.ps1  next.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tsconfig.tsbuildinfo
.claude/: settings.local.json
api/: index.py
api/routers/: analyze.py  integrate.py
api/services/: feature_extractor.py  risup_analyzer.py  risup_builder.py  risup_parser.py
app/: globals.css  layout.tsx  page.tsx
components/: AnalysisResult.tsx  FeatureExtraction.tsx  FileUpload.tsx  IntegrationView.tsx  MultiFileUpload.tsx
lib/: api.ts  types.ts
sample/: 🌙 마지막 거울공방_SFW.risup  😈소악마 프롬프트 v15 [Gem3.1]_preset_용태튠2.risup
